added correct handling of doc unwind and doc aggregate mostly, moved a lot of logic into optimizer, fixed null value in doc arrays, fixed nested arrays